# tools

./: conanfile.py
src/: CMakeLists.txt  CallbackSystemInterfejs.h  DllModule.cpp  DllModule.h  FPSCounter.cpp  FPSCounter.h  GeneratorIdentyfikatorow.cpp  GeneratorIdentyfikatorow.h  LuaState.cpp  LuaState.h  MakeVector.h  MenedzerTranzakcji.cpp  MenedzerTranzakcji.h  NarzedziaSymbol.h  NiepowodzenieTranzakcji.cpp  NiepowodzenieTranzakcji.h  NonCopyable.h  NonMoveable.h  Operacja.cpp  Operacja.h  Serializacja.h  Singleton.h  Stale.h  SumaKontrolnaPliku.cpp  SumaKontrolnaPliku.h  UstawieniaAplikacji.cpp  UstawieniaAplikacji.h  XmlModul.cpp  XmlModul.h  ZarzadcaZasobow.cpp  ZarzadcaZasobow.h  Zasob.h  Zlecenie.h
test_package/: conanfile.py  example.cpp
